Overwriting positioning on the form-fieldset to avoid overflow issues on smaller device heights. Props @keoshi

--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -7,7 +7,7 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 		// Adjust the padding as we no longer
 		// show the masterbar.
 		padding-top: 48px;
-		overflow: visible;
+
 		& > .banner {
 			max-width: 600px;
 		}
@@ -941,6 +941,10 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 		&:focus {
 			box-shadow: inset 0 0 0 2px var( --color-jetpack );
 		}
+	}
+
+	.site-topic__content .form-fieldset {
+		position: relative;
 	}
 }
 
